delete java from denovogui

--- a/denovoGUI/1.5.2/Dockerfile
+++ b/denovoGUI/1.5.2/Dockerfile
@@ -17,8 +17,7 @@ FROM biodckr/biodocker:latest
 
 USER root
 
-RUN apt-get update && apt-get install openjdk-7-jre -y && \
-    echo "biodocker ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/biodocker
+RUN echo "biodocker ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/biodocker
 
 USER biodocker
 
