clean apt from dia-umpire

--- a/DIA-Umpire/1.4256/Dockerfile
+++ b/DIA-Umpire/1.4256/Dockerfile
@@ -17,9 +17,12 @@ FROM biodckr/biodocker:latest
 
 USER root
 
-RUN apt-get update && apt-get install -y \
-	openjdk-7-jre \
-	gnuplot 
+RUN apt-get update && \
+    apt-get install -y \
+      gnuplot     && \
+    apt-get clean && \
+    apt-get purge && \
+    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 RUN ZIP=tpp-4.8.0.zip && \
     mkdir -p /usr/local && \
