formating; not change user; clean apt rstudio

--- a/EMBOSS/6.6.0-1/Dockerfile
+++ b/EMBOSS/6.6.0-1/Dockerfile
@@ -19,7 +19,8 @@ USER root
 
 # Install EMBOSS package
 RUN apt-get update && \
-    apt-get install -y emboss=6.6.0-1 && \
+    apt-get install -y \
+      emboss=6.6.0-1 && \
     apt-get clean && \
     apt-get purge && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
