--- a/MSAmanda/1.0.0.5242/Dockerfile
+++ b/MSAmanda/1.0.0.5242/Dockerfile
@@ -18,7 +18,8 @@ FROM biodckr/biodocker:latest
 USER root
 
 RUN apt-get update && \
-    apt-get install mono-complete -y && \
+    apt-get install -y \
+      mono-complete && \
     apt-get clean && \
     apt-get purge && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
