--- a/BLAST/2.2.28-2/Dockerfile
+++ b/BLAST/2.2.28-2/Dockerfile
@@ -19,7 +19,8 @@ USER root
 
 # Install BLAST toolkit
 RUN apt-get update && \
-    apt-get install -y ncbi-blast+=2.2.28-2 && \
+    apt-get install -y \
+      ncbi-blast+=2.2.28-2 && \
     apt-get clean && \
     apt-get purge && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
