--- a/Clustal-Omega/1.2.1-1/Dockerfile
+++ b/Clustal-Omega/1.2.1-1/Dockerfile
@@ -19,7 +19,8 @@ USER root
 
 # Install Clustalo
 RUN apt-get update && \
-    apt-get install -y clustalo && \
+    apt-get install -y \
+      clustalo && \
     apt-get clean && \
     apt-get purge && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
