--- a/TPP/4.8/Dockerfile
+++ b/TPP/4.8/Dockerfile
@@ -4,10 +4,15 @@
 # Version:          1
 # Software:         TPP
 # Software Version: 4.8
+# Description:      a collection of integrated tools for MS/MS proteomics
+# Website:          http://tools.proteomecenter.org/wiki/index.php?title=Software:TPP
+# Tags:             Proteomics
+# Provides:         tpp 4.8.0
 # Base Image:       biodckr/biodocker:latest
 # Build Cmd:        docker build --rm -t biodckr/tpp 4.8/.
 # Pull Cmd:         docker pull biodckr/tpp
 # Run Cmd:          docker run --rm biodckr/tpp
+# Extra:            This container only posses the binary files, the web interface is not configurated
 #################################################################
 
 # Set the base image to Ubuntu
