--- a/BLAST/2.2.28-2/Dockerfile
+++ b/BLAST/2.2.28-2/Dockerfile
@@ -4,7 +4,11 @@
 # Version:          1
 # Software:         NCBI BLAST+
 # Software Version: 2.2.28-2
-# Base Image:       biodocker:latest
+# Description:      basic local alignment search tool
+# Website:          http://blast.ncbi.nlm.nih.gov/Blast.cgi?PAGE_TYPE=BlastDocs&DOC_TYPE=Download
+# Tags:             Genomics|Protemomics|Transcriptomics|General
+# Provides:         blast 2.2.28-2
+# Base Image:       biodckr/biodocker:latest
 # Build Cmd:        docker build --rm -t biodckr/ncbi-blast 2.2.28-2/.
 # Pull Cmd:         docker pull biodckr/ncbi-blast
 # Run Cmd:          docker run --rm biodckr/ncbi-blast <options> <files>
@@ -20,7 +24,7 @@ USER root
 # Install BLAST toolkit
 RUN apt-get update && \
     apt-get install -y \
-      ncbi-blast+=2.2.28-2 && \
+      ncbi-blast=2.2.28-2 && \
     apt-get clean && \
     apt-get purge && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
