--- a/PepNovo+/20120423/Dockerfile
+++ b/PepNovo+/20120423/Dockerfile
@@ -23,7 +23,7 @@ USER root
 
 RUN apt-get update && \
     apt-get install -y \
-	dos2unix  && \
+	  dos2unix  && \
     apt-get clean && \
     apt-get purge && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
@@ -38,7 +38,11 @@ RUN ZIP=PepNovo.20120423.zip && \
     make && \
     cp PepNovo_bin /home/biodocker/bin/ && \
     dos2unix /home/biodocker/bin/PepNovo/Models/*.* && \
-    dos2unix /home/biodocker/bin/PepNovo/Models/*/*.* 
+    dos2unix /home/biodocker/bin/PepNovo/Models/*/*.*
+
+ENV PATH /home/biodocker/bin:$PATH
+
+USER biodocker
 
 WORKDIR /data
 
