--- a/Comet/2015011/Dockerfile
+++ b/Comet/2015011/Dockerfile
@@ -26,13 +26,13 @@ RUN ZIP=comet_binaries_2015011.zip && \
     chmod -R 755 /home/biodocker/bin/Comet/* && \
     rm /tmp/$ZIP
 
+RUN mv /home/biodocker/bin/Comet/comet.2015011.linux.exe /home/biodocker/bin/Comet/comet
+
 ENV PATH /home/biodocker/bin/Comet:$PATH
 
 USER biodocker
 
 WORKDIR /data
-
-ENTRYPOINT ["/home/biodocker/bin/Comet/comet.2015011.linux.exe"]
 
 ##################### INSTALLATION END #####################
 
