fixing user in prophets

--- a/PeptideProphet/201510131012/Dockerfile
+++ b/PeptideProphet/201510131012/Dockerfile
@@ -7,7 +7,7 @@
 # Base Image:       biodckr/biodocker:latest
 # Build Cmd:        docker build -t biodckr/PeptideProphet 201510131012/.
 # Pull Cmd:         docker pull biodckr/PeptideProphet
-# Run Cmd:          docker run biodckr/PeptideProphet
+# Run Cmd:          docker run biodckr/PeptideProphet PeptideProphet
 #################################################################
 
 # Set the base image to biodckr/biodocker
@@ -18,7 +18,7 @@ ENV DEBIAN_FRONTEND noninteractive
 
 ################## BEGIN INSTALLATION ######################
 
-USER root
+USER biodocker
 
 RUN ZIP=PeptideProphetParser.zip && \
     wget https://github.com/BioDocker/software-archive/releases/download/PeptideProphet/$ZIP -O /tmp/$ZIP && \
@@ -30,12 +30,10 @@ RUN mv /home/biodocker/bin/PeptideProphetParser /home/biodocker/bin/PeptideProph
 
 ENV PATH /home/biodocker/bin:$PATH
 
-USER biodocker
-
 WORKDIR /data
 
 ##################### INSTALLATION END #####################
 
 # File Author / Maintainer
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
-# Modified by Felipe da Veiga Leprevost 08-27-2015
+# Modified by Felipe da Veiga Leprevost 11-27-2015
